--- a/css/media.css
+++ b/css/media.css
@@ -528,6 +528,9 @@
   .specialists__title {
     margin-bottom: 0;
   }
+  .specialists-slider {
+    position: relative;
+  }
   .specialists-slider.current {
     height: 580px;
   }
@@ -557,10 +560,12 @@
     height: 230px;
     width: 330px;
     background-position: 50% 30%;
+    position: relative;
   }
   .specialists-info {
     padding: 20px 0 0;
     width: 100%;
+    position: relative;
   }
   .specialists__name {
     font-size: 28px;
