--- a/scss/style.scss
+++ b/scss/style.scss
@@ -240,6 +240,10 @@ textarea {
   color: #141414;
 }
 
+.border-bottom {
+  border-bottom: 1px solid #8c8c8c;
+}
+
 .breadcrumbs-substrate {
   position: absolute;
   width: 100%;
@@ -269,18 +273,28 @@ textarea {
 
 
 .breadcrumbs {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 70px;
   font-size: 16px;
   line-height: 1;
   color: #000;
   z-index: 1;
   position: relative;
-  padding: 27px 0;
+  padding: 15px 0;
+  &_high {
+    height: 100px;
+    padding: 25px 0;
+  }
 }
 
 .breadcrumbs__item {
   display: inline;
   &::after {
-    content: " /";
+    content: "/";
+    margin-right: 3px;
+    margin-left: 3px;
   }
   &:last-of-type::after {
     display: none;
@@ -294,7 +308,7 @@ textarea {
 /* HEADER */
 
 .header {
-  margin-bottom: 24px;
+  padding-bottom: 24px;
   &::before {
     content: "";
     position: absolute;
@@ -469,7 +483,7 @@ textarea {
     z-index: 2;
     border: 1px solid transparent;
     transition: background-color 0s, max-height .1s, padding .2s, margin .1s, border .1s;
-    transition-delay: .2s, 0s, 0s, 0s, 0s;
+    transition-delay: .2s, 0s, 0s, 0s, .2s;
   }
   &__item {
     font-size: 18px;
@@ -870,6 +884,11 @@ body.menu {
   }
   &__date {
     color: #999;
+  }
+  &__service {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 15px;
   }
 }
 
@@ -1363,6 +1382,250 @@ address {
     }
   }
 }
+
+/**********************/
+/* SALONS-PAGE */
+
+.salons {
+  margin-bottom: 140px;
+  &__title {
+    margin-bottom: 40px;
+    font-size: 56px;
+  }
+  &-item {
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    z-index: -1;
+    transition: opacity 0s;
+    &.current {
+      position: relative;
+      opacity: 1;
+      z-index: 1;
+      transition: opacity .6s;
+    } 
+  }
+  &-tabs {
+    margin-bottom: 26px;
+    &__item {
+      font-family: 'PlayfairDisplaySC', sans-serif;
+      display: block;
+      width: 27%;
+      font-size: 36px;
+      font-weight: 700;
+      padding-bottom: 10px;
+      color: #d9d9d9;
+      position: relative;
+      cursor: pointer;
+      text-align: center;
+      transition: color .3s;
+      &.current {
+        color: #141414 !important;
+        &::before {
+          background-color: #8c8c8c;
+        }
+        &::after {
+          background-color: #8c8c8c;
+        }
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        left: 0;
+        bottom: -3px;
+        background-color: #d9d9d9;
+        transition: background .3s;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: -6px;
+        background-color: #d9d9d9;
+        transition: background .3s;
+      }
+    }
+  }
+  &-slider {
+    margin-bottom: 60px;
+    &__item {
+      background: 50% 50% / cover no-repeat;
+      width: 100%;
+      height: 450px;
+    }
+  }
+  &-address {
+    margin-bottom: 35px;
+    &__item {
+      span {
+        color: #868686;
+      }
+      &:first-of-type {
+        width: 360px;
+      }
+      &:last-of-type {
+        width: 360px;
+        padding-left: 100px;
+      }
+      a {
+        transition: color .3s;
+      }
+    }
+  }
+  &__map {
+    max-width: 1110px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 350px;
+    overflow: hidden;
+    iframe {
+      width: calc(100% + 100px);
+      height: calc(100% + 320px);
+      margin: -160px 0 0 -50px;
+    }
+  }
+}
+
+.work {
+  height: 26.3vw;
+  margin-bottom: 0;
+  .container {
+    height: 100%;
+  }
+  .row {
+    height: 100%;
+  }
+  &__img {
+      max-width: none;
+      max-height: none;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      height: 100%;
+      max-height: 100%;
+  }
+}
+
+/* TESTIMONIALS-PAGE */
+
+.testimonials-page {
+  height: 510px;
+  padding: 50px 0 10px;
+  background: 50% 50% / cover no-repeat;
+  margin-top: -100px;
+  margin-bottom: 200px;
+  &__img {
+    position: absolute;
+    background: 50% 50% / cover no-repeat;
+    width: 310px;
+    height: 450px;
+    border: 1px solid #d1d1d1;
+    bottom: -60px;
+    left: 15px;
+  }
+  &-text {
+    width: calc(100% - 350px);
+    margin-left: auto;
+    p {
+      font-size: 20px;
+    }
+  }
+  &__title {
+    font-size: 56px;
+    margin-bottom: 30px;
+  }
+  &__btn {
+    margin-top: 25px;
+  }
+}
+
+.testimonials-container {
+  padding-bottom: 140px;
+  .testimonials-item {
+    height: auto;
+    min-height: 300px;
+    & + .testimonials-item {
+      margin-top: 30px;
+    }
+  }
+  .testimonials__img {
+    height: 298px;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+  }
+  .testimonials-text {
+    padding: 40px 45px;
+    width: 100%;
+    p {
+      max-height: none;
+      display: inline;
+    }
+  }
+  &__btn {
+    margin-top: 40px;
+  }
+}
+
+/**********************/
+/* BLOG-PAGE */
+
+.blog {
+  padding-bottom: 140px;
+  &__title {
+    margin-bottom: 40px;
+    font-size: 56px;
+  }
+  &-container {
+    margin: 0 0 -30px -30px;
+  }
+  &-item {
+    width: calc(50% - 30px);
+    height: 447px;
+    margin: 0 0 30px 30px;
+    border: 1px solid #d1d1d1;
+    transition: box-shadow .3s;
+  }
+  &__img {
+    border-bottom: 1px solid #d1d1d1;
+    height: 200px;
+    width: 100%;
+    background: 50% 50% / cover no-repeat;
+  }
+  &-content {
+    height: calc(100% - 200px);
+    padding: 30px 40px 35px;
+  }
+  &__subtitle {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    max-height: 60px;
+    overflow: hidden;
+  }
+  &__text {
+    margin-bottom: 25px;
+    overflow: hidden;
+    max-height: 132px;
+  }
+  &__more {
+    color: #646464;
+    text-decoration: underline;
+  }
+  &__date {
+    color: #999;
+  }
+  &__btn {
+    margin-top: 40px;
+  }
+}
+
 
 /**********************/
 /* FOOTER */
