--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,10 @@ ul {
   content: "\e90c";
 }
 
+.icon-info:before {
+  content: "\e90d";
+}
+
 html {
   overflow-x: hidden;
   min-width: 100%;
@@ -304,11 +308,12 @@ input[type="text"]::-ms-reveal {
 input[type="text"],
 input[type="tel"],
 input[type="email"],
+input[type="number"],
 textarea {
   border: 1px solid #dfdfdf;
   font-size: 16px;
   font-weight: 300;
-  padding: 11px 19px;
+  padding: 14px 19px;
   resize: none;
   overflow: hidden;
   transition: border .3s;
@@ -317,8 +322,10 @@ textarea {
 input[type="text"]::placeholder,
 input[type="tel"]::placeholder,
 input[type="email"]::placeholder,
+input[type="number"]::placeholder,
 textarea::placeholder {
   font-weight: 300;
+  font-size: #8d8c8c;
 }
 
 input[type="text"]:active, input[type="text"]:focus,
@@ -326,14 +333,153 @@ input[type="tel"]:active,
 input[type="tel"]:focus,
 input[type="email"]:active,
 input[type="email"]:focus,
+input[type="number"]:active,
+input[type="number"]:focus,
 textarea:active,
 textarea:focus {
-  border-color: #767676;
+  border-color: #646464;
 }
 
 /* styles */
+.input-file label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.input-file label.file .input-file__btn {
+  background: 50% 50% / cover no-repeat;
+  background-color: #eeeeee;
+}
+
+.input-file label.file .input-file__btn::before, .input-file label.file .input-file__btn::after {
+  display: none;
+}
+
+.input-file label.file:hover .layer {
+  transform: translate(-50%, -50%);
+}
+
+.input-file label.file:hover .layer::before, .input-file label.file:hover .layer::after {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.input-file__btn {
+  position: relative;
+  margin-right: 10px;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #f5f5f5;
+  transition: background-color .3s;
+}
+
+.input-file__btn .layer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  background-color: rgba(255, 255, 255, 0.8);
+  transform: translate(-50%, -50%) scale(0.01);
+  transform-origin: center center;
+  transition: transform .3s;
+}
+
+.input-file__btn .layer::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  left: 50%;
+  top: 50%;
+  background-color: #ff0000;
+  transform: translate(-50%, -50%);
+  transition: background-color .3s, transform .3s;
+}
+
+.input-file__btn .layer::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 15px;
+  left: 50%;
+  top: 50%;
+  background-color: #ff0000;
+  transform: translate(-50%, -50%);
+  transition: background-color .3s, transform .3s;
+}
+
+.input-file__btn::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  left: 50%;
+  top: 50%;
+  background-color: #000;
+  transform: translate(-50%, -50%);
+  transition: background-color .3s, transform .3s;
+}
+
+.input-file__btn::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 15px;
+  left: 50%;
+  top: 50%;
+  background-color: #000;
+  transform: translate(-50%, -50%);
+  transition: background-color .3s, transform .3s;
+}
+
+.input-file__text {
+  margin-right: 15px;
+}
+
+.input-file__info {
+  color: #ffb033;
+  font-size: 13px;
+  position: relative;
+}
+
+.input-file__info .info {
+  position: absolute;
+  overflow: hidden;
+  flex-direction: column;
+  display: flex;
+  font-size: 13px;
+  line-height: 18px;
+  color: #686868;
+  background-color: #fff;
+  padding: 0;
+  bottom: 11px;
+  left: 11px;
+  opacity: 0;
+  white-space: nowrap;
+  max-height: 0;
+  transition: opacity .3s;
+}
+
+.input-file__info:hover .info {
+  opacity: 1;
+  max-height: none;
+  padding: 10px 15px;
+  border: 1px solid #eee;
+}
+
+.input-file__hidden {
+  display: none;
+}
+
 .standart-btn {
-  display: block;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 220px;
   height: 48px;
   background-color: #ffd800;
@@ -920,6 +1066,7 @@ body.menu .nav__li {
 }
 
 .popular-item {
+  display: block;
   height: 400px;
   margin-bottom: 30px;
   position: relative;
@@ -1945,6 +2092,218 @@ address {
 }
 
 /**********************/
+/* BLOG-OPEN-PAGE */
+.blog-open {
+  padding-bottom: 140px;
+}
+
+.blog-open-container {
+  margin-bottom: 50px;
+}
+
+.blog-open__title {
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 10px;
+}
+
+.blog-open__date {
+  display: block;
+  color: #999;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.blog-open__img {
+  max-width: 50%;
+}
+
+.blog-open__img:nth-of-type(odd) {
+  float: left;
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+
+.blog-open__img:nth-of-type(even) {
+  float: right;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.blog-open__img + p {
+  margin-top: 25px;
+}
+
+.blog-open p + p {
+  margin-top: 25px;
+}
+
+.blog-open-nav {
+  width: 100%;
+}
+
+.blog-open-nav p {
+  color: #000;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  max-width: 360px;
+  transition: color .3s;
+}
+
+.blog-open-nav button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  color: #333;
+  transition: color .3s, background-color .3s;
+}
+
+.blog-open-nav a:active button {
+  background-color: #c1bebe !important;
+}
+
+.blog-open__next button {
+  margin-left: 20px;
+}
+
+.blog-open__next i {
+  transform: scale(-1);
+}
+
+.blog-open__next p {
+  text-align: right;
+}
+
+.blog-open__prev button {
+  margin-right: 20px;
+}
+
+/**********************/
+/* BONUSES-PAGE */
+.bonuses__title {
+  font-size: 56px;
+  margin-bottom: 30px;
+}
+
+.bonuses-tabs__item {
+  position: relative;
+  font-size: 24px;
+  font-weight: 700;
+  color: #d9d9d9;
+  width: calc(50% - 15px);
+  cursor: pointer;
+  margin-bottom: 6px;
+  transition: color .3s;
+}
+
+.bonuses-tabs__item.current {
+  color: #141414 !important;
+}
+
+.bonuses-tabs__item.current::before {
+  background-color: #8c8c8c;
+  transition: background-color .3s;
+}
+
+.bonuses-tabs__item.current::after {
+  background-color: #8c8c8c;
+  transition: background-color .3s;
+}
+
+.bonuses-tabs__item::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  left: 0;
+  bottom: -3px;
+  background-color: #d9d9d9;
+  transition: background .3s;
+}
+
+.bonuses-tabs__item::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  left: 0;
+  bottom: -6px;
+  background-color: #d9d9d9;
+  transition: background .3s;
+}
+
+.bonuses-container {
+  position: relative;
+  padding-bottom: 140px;
+}
+
+.bonuses-content {
+  max-height: 0;
+  padding-top: 0px;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity .3s;
+}
+
+.bonuses-content.current {
+  max-height: none;
+  padding-top: 40px;
+  opacity: 1;
+}
+
+.bonuses-item {
+  padding-bottom: 40px;
+  border-bottom: 1px solid #eee;
+}
+
+.bonuses-item:nth-of-type(odd) .bonuses__img {
+  float: left;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.bonuses-item:nth-of-type(even) .bonuses__img {
+  float: right;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.bonuses-item + .bonuses-item {
+  padding-top: 40px;
+}
+
+.bonuses__subtitle {
+  font-size: 48px;
+  line-height: 60px;
+  color: #d3a14b;
+  margin-bottom: 15px;
+}
+
+.bonuses__img {
+  max-width: 50%;
+}
+
+.bonuses__more {
+  margin-top: 40px;
+}
+
+.promotion-item {
+  height: 450px;
+  width: 100%;
+  background: 50% 50% / cover no-repeat;
+}
+
+.promotion-item + .promotion-item {
+  margin-top: 30px;
+}
+
+/**********************/
 /* FOOTER */
 .footer {
   height: 122px;
@@ -2005,4 +2364,249 @@ address {
 
 .address__item + .address__item {
   margin-top: 10px;
+}
+
+/*************/
+/* MODAL */
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+.modal {
+  overflow: auto;
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-container {
+  position: relative;
+  max-width: 100%;
+  width: 470px;
+  background-color: #fff;
+  padding: 55px 60px 50px;
+  font-size: 16px;
+  margin: auto;
+}
+
+.modal__title {
+  font-family: 'PlayfairDisplaySC', sans-serif;
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.modal-dropdown {
+  position: relative;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 300;
+}
+
+.modal-dropdown .icon-dropdown {
+  transition: transform .3s;
+}
+
+.modal-dropdown__current {
+  padding: 14px 19px;
+  border: 1px solid #646464;
+  cursor: pointer;
+}
+
+.modal-dropdown-list {
+  background: #fff;
+  width: 100%;
+  max-height: 0px;
+  padding-top: 0;
+  padding-bottom: 0px;
+  overflow: hidden;
+  position: absolute;
+  border-left: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 1px solid transparent;
+  z-index: 1;
+  transition: max-height .3s ease-out, border 0s, padding .6s;
+  transition-delay: 0s, .3s;
+}
+
+.modal-dropdown__item {
+  padding: 14px 19px;
+  cursor: pointer;
+  transition: background-color .3s;
+}
+
+.modal-dropdown__item span {
+  color: #646464;
+  transition: color .3s;
+}
+
+.modal-dropdown__item i {
+  font-size: 9px;
+  display: none;
+}
+
+.modal-dropdown__item.current i {
+  display: block;
+}
+
+.modal-dropdown__item.current span {
+  color: #000;
+}
+
+.modal-dropdown.show .icon-dropdown {
+  transform: rotate(-180deg);
+}
+
+.modal-dropdown.show .modal-dropdown-list {
+  border-left: 1px solid #646464;
+  border-bottom: 1px solid #646464;
+  border-right: 1px solid #646464;
+  max-height: 1000px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  transition: max-height .3s ease-in, border 0s, padding .6s;
+  transition-delay: 0s;
+}
+
+.modal input,
+.modal textarea,
+.modal .modal-dropdown {
+  width: 100%;
+}
+
+.modal input + input,
+.modal input + textarea,
+.modal input + .modal-dropdown,
+.modal textarea + input,
+.modal textarea + textarea,
+.modal textarea + .modal-dropdown,
+.modal .modal-dropdown + input,
+.modal .modal-dropdown + textarea,
+.modal .modal-dropdown + .modal-dropdown {
+  margin-top: 20px;
+}
+
+.modal input + button,
+.modal textarea + button,
+.modal .modal-dropdown + button {
+  margin-top: 30px;
+}
+
+.modal .input-file {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.modal textarea {
+  height: 100px;
+}
+
+.modal__btn {
+  width: 300px;
+  max-width: 100%;
+}
+
+.modal__politics {
+  margin-top: 15px;
+  font-size: 12px;
+  line-height: 16px;
+  color: #8b8b8b;
+  text-align: center;
+}
+
+.modal__politics a {
+  text-decoration: underline;
+  transition: color .3s;
+}
+
+.modal.active {
+  display: flex;
+  align-items: center;
+}
+
+.modal.active .modal-container {
+  animation: zoom .3s ease-in;
+}
+
+.modal-close {
+  cursor: pointer;
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  display: block;
+  transform: none;
+  transition: transform .3s;
+}
+
+.modal-close::before {
+  content: "";
+  width: 18px;
+  height: 1px;
+  background-color: #b7b7b7;
+  position: absolute;
+  left: -2px;
+  top: 6px;
+  transform: rotate(45deg);
+  transition: background-color .3s;
+}
+
+.modal-close::after {
+  content: "";
+  width: 18px;
+  height: 1px;
+  background-color: #b7b7b7;
+  position: absolute;
+  left: -2px;
+  top: 6px;
+  transform: rotate(135deg);
+  transition: background-color .3s;
+}
+
+/**************/
+/* policy */
+.policy {
+  background: #fff;
+  max-width: 940px;
+  margin: 1em auto;
+  border: 1px solid #ccc;
+  padding: 1em 2%;
+}
+
+.policy h1 {
+  color: #006dad;
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  line-height: 48px;
+}
+
+.policy h2 {
+  color: #444;
+  font-size: 1.8em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  text-align: center;
+}
+
+.policy p {
+  color: #333;
+  padding: 0 0 0.5em;
+  font: 1em Arial;
+  line-height: 150%;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
