--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,6 +116,9 @@ $font-dir:'../fonts/';
 .icon-check:before {
   content: "\e90c";
 }
+.icon-info:before {
+  content: "\e90d";
+}
 
 html {
   overflow-x: hidden;
@@ -174,27 +177,161 @@ input[type="text"]::-ms-reveal {  display: none; width : 0; height: 0; }
 input[type="text"],
 input[type="tel"],
 input[type="email"],
+input[type="number"],
 textarea {
   border: 1px solid #dfdfdf;
   font-size: 16px;
   font-weight: 300;
-  padding: 11px 19px;
+  padding: 14px 19px;
   resize: none;
   overflow: hidden;
   transition: border .3s;
   &::placeholder {
     font-weight: 300;
+    font-size: #8d8c8c;
   }
   &:active,
   &:focus {
-    border-color: #767676;
+    border-color: #646464;
   }
 }
 
 /* styles */
 
+.input-file {
+  label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    &.file {
+      .input-file__btn {
+        background: 50% 50% / cover no-repeat;
+        background-color: #eeeeee;
+        &::before,
+        &::after {
+          display:none;
+        }
+      }
+      &:hover {
+        .layer {
+          transform: translate(-50%, -50%);
+          &::before,
+          &::after {
+            transform: translate(-50%, -50%) rotate(45deg);
+          }
+        }
+      }
+    }
+  }
+  &__btn {
+    position: relative;
+    margin-right: 10px;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    transition: background-color .3s;
+    .layer {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      border-radius: 50%;
+      left: 50%;
+      top: 50%;
+      background-color: rgba(255, 255, 255, .8);
+      transform: translate(-50%, -50%) scale(.01);
+      transform-origin: center center;
+      transition: transform .3s;
+      &::before {
+        content: "";
+        position: absolute;
+        width: 15px;
+        height: 2px;
+        left: 50%;
+        top: 50%;
+        background-color: #ff0000;
+        transform: translate(-50%, -50%);
+        transition: background-color .3s, transform .3s;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        width: 2px;
+        height: 15px;
+        left: 50%;
+        top: 50%;
+        background-color: #ff0000;
+        transform: translate(-50%, -50%);
+        transition: background-color .3s, transform .3s;
+      }
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      width: 15px;
+      height: 2px;
+      left: 50%;
+      top: 50%;
+      background-color: #000;
+      transform: translate(-50%, -50%);
+      transition: background-color .3s, transform .3s;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 2px;
+      height: 15px;
+      left: 50%;
+      top: 50%;
+      background-color: #000;
+      transform: translate(-50%, -50%);
+      transition: background-color .3s, transform .3s;
+    }
+  }
+  &__text {
+    margin-right: 15px;
+  }
+  &__info {
+    color: #ffb033;
+    font-size: 13px;
+    position: relative;
+    .info {
+      position: absolute;
+      overflow: hidden;
+      flex-direction: column;
+      display: flex;
+      font-size: 13px;
+      line-height: 18px;
+      color: #686868;
+      background-color: #fff;
+      padding: 0;
+      bottom: 11px;
+      left: 11px;
+      opacity: 0;
+      white-space: nowrap;
+      max-height: 0;
+      transition: opacity .3s;
+    }
+    &:hover {
+      .info {
+        opacity: 1;
+        max-height: none;
+        padding: 10px 15px;
+        border: 1px solid #eee;
+      }
+    }
+  }
+  &__hidden {
+    display: none;
+  }
+}
+
 .standart-btn {
-  display: block;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 220px;
   height: 48px;
   background-color: #ffd800;
@@ -306,6 +443,7 @@ textarea {
 
 /********************/
 /* HEADER */
+
 
 .header {
   padding-bottom: 24px;
@@ -721,6 +859,7 @@ body.menu {
     margin-bottom: -30px;
   }
   &-item {
+    display: block;
     height: 400px;
     margin-bottom: 30px;
     position: relative;
@@ -1626,6 +1765,204 @@ address {
   }
 }
 
+/**********************/
+/* BLOG-OPEN-PAGE */
+
+.blog-open {
+  padding-bottom: 140px;
+  &-container {
+    margin-bottom: 50px;
+  }
+  &__title {
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 10px;
+  }
+  &__date {
+    display: block;
+    color: #999;
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  &__img {
+    max-width: 50%;
+    &:nth-of-type(odd) {
+      float: left;
+      margin-bottom: 30px;
+      margin-right: 30px;
+    }
+    &:nth-of-type(even) {
+      float: right;
+      margin-top: 30px;
+      margin-left: 30px;
+      margin-bottom: 30px;
+    }
+    & + p {
+      margin-top: 25px;
+    }
+  }
+  p {
+    & + p {
+      margin-top: 25px;
+    }
+  }
+  &-nav {
+    width: 100%;
+    p {
+      color: #000;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 20px;
+      max-width: 360px;
+      transition: color .3s;
+    }
+    button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 40px;
+      width: 40px;
+      background-color: #f5f5f5;
+      border-radius: 50%;
+      color: #333;
+      transition: color .3s, background-color .3s;
+    }
+    a:active {
+      button {
+        background-color: #c1bebe !important;
+      }
+    }
+  }
+  &__next {
+    button {
+      margin-left: 20px;
+    }
+    i {
+      transform: scale(-1);
+    }
+    p {
+      text-align: right;
+    }
+  }
+  &__prev {
+    button {
+      margin-right: 20px;
+    }
+  }
+}
+
+/**********************/
+/* BONUSES-PAGE */
+
+.bonuses {
+  &__title {
+    font-size: 56px;
+    margin-bottom: 30px;
+  }
+  &-tabs {
+    &__item {
+      position: relative;
+      font-size: 24px;
+      font-weight: 700;
+      color: #d9d9d9;
+      width: calc(50% - 15px);
+      cursor: pointer;
+      margin-bottom: 6px;
+      transition: color .3s;
+      &.current {
+        color: #141414 !important;
+        &::before {
+          background-color: #8c8c8c;
+          transition: background-color .3s;
+        }
+        &::after {
+          background-color: #8c8c8c;
+          transition: background-color .3s;
+        }
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        left: 0;
+        bottom: -3px;
+        background-color: #d9d9d9;
+        transition: background .3s;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: -6px;
+        background-color: #d9d9d9;
+        transition: background .3s;
+      }
+    }
+  }
+  &-container {
+    position: relative;
+    padding-bottom: 140px;
+  }
+  &-content {
+    max-height: 0;
+    padding-top: 0px;
+    overflow: hidden;
+    opacity: 0;
+    transition: opacity .3s;
+    &.current {
+      max-height: none;
+      padding-top: 40px;
+      opacity: 1;
+    }
+  }
+  &-item {
+    padding-bottom: 40px;
+    border-bottom: 1px solid #eee;
+    &:nth-of-type(odd) {
+      .bonuses__img {
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 30px;
+      }
+    }
+    &:nth-of-type(even) {
+      .bonuses__img {
+        float: right;
+        margin-left: 30px;
+        margin-bottom: 30px;
+      }
+    }
+    & + .bonuses-item {
+      padding-top: 40px;
+    }
+  }
+  &__subtitle {
+    font-size: 48px;
+    line-height: 60px;
+    color: #d3a14b;
+    margin-bottom: 15px;
+  }
+  &__img {
+    max-width: 50%;
+  }
+  &__more {
+    margin-top: 40px;
+  }
+}
+
+.promotion {
+  &-item {
+    height: 450px;
+    width: 100%;
+    background: 50% 50% / cover no-repeat;
+    & + .promotion-item {
+      margin-top: 30px;
+    }
+  }
+}
 
 /**********************/
 /* FOOTER */
@@ -1678,5 +2015,221 @@ address {
     & + .address__item {
       margin-top: 10px;
     }
+  }
+}
+
+/*************/
+/* MODAL */
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+.modal {
+  overflow: auto;
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  &-container {
+    position: relative;
+    max-width: 100%;
+    width: 470px;
+    background-color: #fff;
+    padding: 55px 60px 50px;
+    font-size: 16px;
+    margin: auto; 
+
+  }
+  &__title {
+    font-family: 'PlayfairDisplaySC', sans-serif;
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 25px;
+    text-align: center;
+  }
+  &-dropdown {
+    position: relative;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 300;
+    .icon-dropdown {
+      transition: transform .3s;
+    }
+    &__current {
+      padding: 14px 19px;
+      border: 1px solid #646464;
+      cursor: pointer;
+    }
+    &-list {
+      background: #fff;
+      width: 100%;
+      max-height: 0px;
+      padding-top: 0;
+      padding-bottom: 0px;
+      overflow: hidden;
+      position: absolute;
+      border-left: 1px solid transparent;
+      border-bottom: 1px solid transparent;
+      border-right: 1px solid transparent;
+      z-index: 1;
+      transition: max-height .3s ease-out, border 0s, padding .6s;
+      transition-delay: 0s, .3s;
+    }
+    &__item {
+      padding: 14px 19px;
+      cursor: pointer;
+      transition: background-color .3s;
+      span {
+        color: #646464;
+        transition: color .3s;
+      }
+      i {
+        font-size: 9px;
+        display: none;
+      }
+      &.current {
+        i {
+          display: block;
+        }
+        span {
+          color: #000;
+        }
+      }
+    }
+    &.show {
+      .icon-dropdown {
+        transform: rotate(-180deg);
+      }
+      .modal-dropdown-list {
+        border-left: 1px solid #646464;
+        border-bottom: 1px solid #646464;
+        border-right: 1px solid #646464;
+        max-height: 1000px;
+        padding-top: 30px;
+        padding-bottom: 20px;
+        transition: max-height .3s ease-in, border 0s, padding .6s;
+        transition-delay: 0s;
+        
+      }
+    }
+  }
+  input,
+  textarea,
+  .modal-dropdown {
+    width: 100%;
+    & + input,
+    & + textarea,
+    & + .modal-dropdown {
+      margin-top: 20px;
+    }
+    & + button {
+      margin-top: 30px;
+    }
+  }
+  .input-file {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  textarea {
+    height: 100px;
+  }
+  &__btn {
+    width: 300px;
+    max-width: 100%;
+  }
+  &__politics {
+    margin-top: 15px;
+    font-size: 12px;
+    line-height: 16px;
+    color: #8b8b8b;
+    text-align: center;
+    a {
+      text-decoration: underline;
+      transition: color .3s;
+    }
+  }
+  &.active {
+    display: flex;
+    align-items: center;
+    .modal-container {
+      animation: zoom .3s ease-in;
+    }
+  }
+  &-close {
+    cursor: pointer;
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    display: block;
+    transform: none;
+    transition: transform .3s;
+    &::before {
+      content: "";
+      width: 18px;
+      height: 1px;
+      background-color: #b7b7b7;
+      position: absolute;
+      left: -2px;
+      top: 6px;
+      transform: rotate(45deg);
+      transition: background-color .3s;
+    }
+    &::after {
+      content: "";
+      width: 18px;
+      height: 1px;
+      background-color: #b7b7b7;
+      position: absolute;
+      left: -2px;
+      top: 6px;
+      transform: rotate(135deg);
+      transition: background-color .3s;
+    }
+  }
+}
+
+/**************/
+/* policy */
+
+.policy {
+  background: #fff;
+  max-width: 940px;
+  margin: 1em auto;
+  border: 1px solid #ccc;
+  padding: 1em 2%;
+  h1 {
+    color: #006dad;
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 25px;
+    margin-top: 25px;
+    line-height: 48px;
+  }
+  h2 {
+    color: #444;
+    font-size: 1.8em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    text-align: center;
+  }
+  p {
+    color: #333;
+    padding: 0 0 0.5em;
+    font: 1em Arial;
+    line-height: 150%;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
   }
 }
