--- a/scss/style.scss
+++ b/scss/style.scss
@@ -303,6 +303,7 @@ textarea {
       display: flex;
       font-size: 13px;
       line-height: 18px;
+      z-index: 2;
       color: #686868;
       background-color: #fff;
       padding: 0;
