--- a/css/style.css
+++ b/css/style.css
@@ -453,6 +453,7 @@ textarea:focus {
   display: flex;
   font-size: 13px;
   line-height: 18px;
+  z-index: 2;
   color: #686868;
   background-color: #fff;
   padding: 0;
