--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1132,6 +1132,13 @@
 			padding-top: 30px;
 		}
 	}
+	.input-file__info .info {
+		left: auto;
+		right: 0;
+		top: 50%;
+		bottom: auto;
+		transform: translateY(-50%);
+	}
 }
 
 @media (max-width: 575px) {
